[#1207]Fix api usage